--- a/index.html
+++ b/index.html
@@ -27,5 +27,73 @@
             <li class="learn-more">Learn More</li>
         </ul>
     </header>
+    <main>
+        <h2>Designed for the future</h2>
+        <section class="section-one">
+            <div class="flex-box">
+                <div>
+                    <h3>Introducing an extensible editor</h3>
+                    <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p>
+                </div>
+                <div>
+                    <h3>Robust content management</h3>
+                    <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img src="./illustration-editor-mobile.svg" alt="illustration_editor" class="editor-img">
+            </div>
+        </section>
+
+        <section class="section-two">
+            <div>
+                <h3>State of the Art Infrastructure</h3>
+                <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+            </div>
+        </section>
+
+                <section class="section-one section-three">
+            <div class="flex-box">
+                <div>
+                    <h3>Introducing an extensible editor</h3>
+                    <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p>
+                </div>
+                <div>
+                    <h3>Robust content management</h3>
+                    <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+                </div>
+            </div>
+            <div class="img-container">
+                <img src="./illustration-editor-mobile.svg" alt="illustration_editor" class="editor-img" id="img-editor">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer_box">
+            <a href="">Blogr</a>
+            <ul>
+                <h4>Product</h4>
+                <li>Overview</li>
+                <li>Pricing</li>
+                <li>Marketplace</li>
+                <li>Features</li>
+                <li>Integrations</li>
+            </ul>
+            <ul>
+                <h4>Company</h4>
+                <li>About</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Careers</li>
+            </ul>
+            <ul>
+                <h4>Connect</h4>
+                <li>Contact</li>
+                <li>Newsletter</li>
+                <li>LinkedIn</li>
+            </ul>
+        </div>
+        <p>Challenge by</p>
+    </footer>
 </body>
 </html>
