--- a/index.html
+++ b/index.html
@@ -41,30 +41,33 @@
                 </div>
             </div>
             <div class="img-container">
-                <img src="./illustration-editor-mobile.svg" alt="illustration_editor" class="editor-img">
+                <img src="./illustration-editor-mobile.svg" alt="illustration_editor" id="editor-img">
             </div>
         </section>
 
         <section class="section-two">
+            <div>
+                <img id="mobile-img" src="./illustration-phones.svg" alt="mobile_illustrator">
+            </div>
             <div>
                 <h3>State of the Art Infrastructure</h3>
                 <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
             </div>
         </section>
 
-                <section class="section-one section-three">
+        <section class="section-one section-three">
             <div class="flex-box">
                 <div>
-                    <h3>Introducing an extensible editor</h3>
-                    <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.</p>
+                    <h3>Free, open, simple</h3>
+                    <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
                 </div>
                 <div>
-                    <h3>Robust content management</h3>
-                    <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+                    <h3>Powerful tooling</h3>
+                    <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.</p>
                 </div>
             </div>
             <div class="img-container">
-                <img src="./illustration-editor-mobile.svg" alt="illustration_editor" class="editor-img" id="img-editor">
+                <img src="./illustration-laptop-mobile.svg" alt="illustration_editor"  id="img-editor">
             </div>
         </section>
     </main>
